# DamathZero

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: indicators.cmake
docs/: .gitignore  abstract.tex  acknowledgements.tex  appendix.tex  references.bib  replication-results.tex  thesis.tex
docs/chapters/: conclusion.tex  introduction.tex  methodology.tex  preliminaries.tex  results.tex
docs/images/games/game1/: moves.txt
docs/images/games/game10/: wdl.txt
docs/images/games/game2/: wdls.txt
docs/images/games/game3/: wdls.txt
docs/images/games/game3b/: wdls.txt
docs/images/games/game4/: wdl.txt
docs/images/games/game5/: wdl.txt
docs/images/games/game6/: wdl.txt
docs/images/games/game7/: wdl.txt
docs/images/games/game8/: wdl.txt
docs/images/games/game9/: wdl.txt
src/: alphazero.cpp  app.cpp  arena.cpp  config.cpp  damathzero.cpp  eval.cpp  game.cpp  main.cpp  mcts.cpp  memory.cpp  model.cpp  network.cpp  node.cpp  storage.cpp  train.cpp
src/alphazero/: az.cpp  az.hpp  game.cpp  game.hpp  mcts.cpp  mcts.hpp  memory.cpp  memory.hpp  model.cpp  model.hpp  node.cpp  node.hpp  storage.cpp  storage.hpp
src/damathzero/: board.cpp  board.hpp  dz.cpp  dz.hpp  game.cpp  game.hpp  model.cpp  model.hpp  vit.cpp
src/docs/: references.bib  thesis.tex
src/docs/chapters/: introduction.tex  methodology.tex
src/games/: damath.cpp  tictactoe.cpp
src/games/damath/: agent.cpp  app.cpp  board.cpp  damathzero.cpp  game.cpp  main.cpp  model.cpp  trainer.cpp  vit.cpp
src/games/tictactoe/: main.cpp
src/models/: model.cpp  transformer.cpp
test/: test_alphazero.cpp  test_damathzero.cpp  test_game.cpp  test_mcts.cpp  test_node.cpp
